--- a/manman/css/index.css
+++ b/manman/css/index.css
@@ -25,8 +25,8 @@
 }
 
 #btnNext {
-    display: block; width: 200px; height: 50px;
-    position: absolute; left: 50%; bottom: 0;
+    display: block; width: 200px; height: 20px;
+    position: absolute; left: 50%; bottom: 30px;
     margin-left: -100px;
     background: no-repeat url(../images/btn_next.png) 50% 50%;
     z-index: 999;
@@ -207,4 +207,23 @@
     margin-left: -180px;
     margin-top: 100px;
     z-index: 20;
+}
+#footer {
+    width: 100%; height: 24px;
+    text-align: center;
+    position: absolute; left: 0; bottom: 0;
+}
+#footer .trans-bg {
+    width: 100%; height: 100%;
+    background: #000;
+    opacity: .1;
+    position: absolute; left: 0; bottom: 0;
+}
+#footer p {
+    color: #e6e6e6;
+    text-align: center;
+    line-height: 24px;
+    width: 100%; height: 100%;
+    position: absolute; left: 0; bottom: 0;
+    font-family: '宋体', simsun;
 }
