--- a/ylxPatient_src/less/my_account.less
+++ b/ylxPatient_src/less/my_account.less
@@ -1,24 +1,30 @@
+.account-info-wrap {
+	background-color: #f0efed;
+	padding-bottom: 10px;
+	border-bottom: 1px solid #e9e9e9;
+}
 .account-info {
+	background-color: #fff;
+	padding: 10px;
 	p {
 		display: inline-block;
 		line-height: 24px;
+		color: #555;
 	}
-	.btn {
-		display: inline-block;
-		height: 24px; width: 60px;
+	#accountBalance {
+		strong {
+			color: #78cd43;
+		}
+	}
+	.btn-recharge {
+		height: 24px; width: 50px;
 		font-size: 14px; line-height: 24px;
+		background-color: #78cd43;
+		color: #fff;
 	}
-	margin-bottom: 10px;
 }
 .my-table {
 	th, td {
-		&:first-child {
-			width: 50px;
-			text-align: center;
-		}
-		&:last-child {
-			width: 80px;
-			text-align: center;
-		}
+		width: 33%;
 	}
 }
