--- a/ylxPatient/css/common.css
+++ b/ylxPatient/css/common.css
@@ -5,37 +5,40 @@
   float: right;
 }
 body {
-  padding-top: 50px;
+  padding-top: 44px;
   font-family: sans-serif;
   font-size: 14px;
   line-height: 1.5;
+  color: #555;
 }
 #wrap {
   height: 100%;
 }
 #header {
   text-align: center;
-  border-bottom: 1px solid #ddd;
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
+  background-color: #7ace45;
 }
 #header h1 {
   width: 100%;
   height: 44px;
-  font-size: 20px;
+  font-size: 18px;
   line-height: 44px;
-  color: #333;
+  color: #fff;
+  font-weight: normal;
 }
 #header .back {
   position: absolute;
-  left: 10px;
+  left: 0;
   bottom: 0;
-  text-align: center;
-}
-#header .back .icon {
-  font-size: 40px;
+  height: 44px;
+  width: 34px;
+  background: no-repeat url(../image/header/back.png) center center;
+  -webkit-background-size: 10px auto;
+  background-size: 10px auto;
 }
 #header .header-item {
   display: none;
@@ -44,12 +47,12 @@ body {
   display: block;
 }
 #footer {
-  height: 44px;
+  height: 48px;
   position: fixed;
   bottom: 0;
   left: 0;
   right: 0;
-  border-top: 1px solid #ddd;
+  border-top: 1px solid #e9e9e9;
 }
 #footer .nav-item {
   width: 25%;
@@ -59,9 +62,24 @@ body {
 }
 #footer .nav-item .icon {
   display: block;
-  height: 24px;
-  font-size: 20px;
-  line-height: 24px;
+  height: 30px;
+  -webkit-background-size: 22px auto;
+  background-size: 22px auto;
+  background-position: center 4px;
+  background-repeat: no-repeat;
+}
+#footer .nav-item .icon-home {
+  background-image: url(../image/footer/icon-home.png);
+}
+#footer .nav-item .icon-search {
+  background-image: url(../image/footer/icon-search.png);
+  background-position: center 3px;
+}
+#footer .nav-item .icon-chat {
+  background-image: url(../image/footer/icon-chat.png);
+}
+#footer .nav-item .icon-user {
+  background-image: url(../image/footer/icon-user.png);
 }
 #footer .nav-item span {
   display: block;
@@ -72,9 +90,20 @@ body {
   line-height: 18px;
   width: 100%;
 }
-.con-sec {
-  padding: 0 10px;
-  margin: 10px 0;
+#footer .nav-item-act {
+  color: #7fd149;
+}
+#footer .nav-item-act .icon-home {
+  background-image: url(../image/footer/icon-home-active.png);
+}
+#footer .nav-item-act .icon-search {
+  background-image: url(../image/footer/icon-search-active.png);
+}
+#footer .nav-item-act .icon-chat {
+  background-image: url(../image/footer/icon-chat-active.png);
+}
+#footer .nav-item-act .icon-user {
+  background-image: url(../image/footer/icon-user-active.png);
 }
 .btn {
   display: block;
