--- a/ylxPatient/css/my_account.css
+++ b/ylxPatient/css/my_account.css
@@ -1,24 +1,29 @@
+.account-info-wrap {
+  background-color: #f0efed;
+  padding-bottom: 10px;
+  border-bottom: 1px solid #e9e9e9;
+}
 .account-info {
-  margin-bottom: 10px;
+  background-color: #fff;
+  padding: 10px;
 }
 .account-info p {
   display: inline-block;
   line-height: 24px;
+  color: #555;
 }
-.account-info .btn {
-  display: inline-block;
+.account-info #accountBalance strong {
+  color: #78cd43;
+}
+.account-info .btn-recharge {
   height: 24px;
-  width: 60px;
+  width: 50px;
   font-size: 14px;
   line-height: 24px;
+  background-color: #78cd43;
+  color: #fff;
 }
-.my-table th:first-child,
-.my-table td:first-child {
-  width: 50px;
-  text-align: center;
-}
-.my-table th:last-child,
-.my-table td:last-child {
-  width: 80px;
-  text-align: center;
+.my-table th,
+.my-table td {
+  width: 33%;
 }
