--- a/ylxPatient_src/less/common.less
+++ b/ylxPatient_src/less/common.less
@@ -5,29 +5,31 @@
     float: right;
 }
 body {
-    padding-top: 50px;
+    padding-top: 44px;
     font-family: sans-serif;
     font-size: 14px;
     line-height: 1.5;
+    color: #555;
 }
 #wrap {
     height: 100%;
 }
 #header {
     text-align: center;
-    border-bottom: 1px solid #ddd;
     position: fixed; top: 0; left: 0; right: 0;
+    background-color: #7ace45;
     h1 {
         width: 100%; height: 44px;
-        font-size: 20px; line-height: 44px;
-        color: #333;
+        font-size: 18px; line-height: 44px;
+        color: #fff;
+        font-weight: normal;
     }
     .back {
-        position: absolute; left: 10px; bottom: 0;
-        text-align: center;
-        .icon {
-            font-size: 40px;
-        }
+        position: absolute; left: 0; bottom: 0;
+        height: 44px; width: 34px;
+        background: no-repeat url(../image/header/back.png) center center;
+        -webkit-background-size: 10px auto;
+        background-size: 10px auto;
     }
     .header-item {
         display: none;
@@ -37,16 +39,32 @@ body {
     }
 }
 #footer {
-    height: 44px;
+    height: 48px;
     position: fixed; bottom: 0; left: 0; right: 0;
-    border-top: 1px solid #ddd;
+    border-top: 1px solid #e9e9e9;
     .nav-item {
         width: 25%; height: 100%;
         text-align: center;
         position: relative;
         .icon {
-            display: block; height: 24px;
-            font-size: 20px; line-height: 24px;
+            display: block; height: 30px;
+            -webkit-background-size: 22px auto;
+            background-size: 22px auto;
+            background-position: center 4px;
+            background-repeat: no-repeat;
+        }
+        .icon-home {
+            background-image: url(../image/footer/icon-home.png);
+        }
+        .icon-search {
+            background-image: url(../image/footer/icon-search.png);
+            background-position: center 3px;
+        }
+        .icon-chat {
+            background-image: url(../image/footer/icon-chat.png);
+        }
+        .icon-user {
+            background-image: url(../image/footer/icon-user.png);
         }
         span {
             display: block; height: 18px; 
@@ -55,10 +73,21 @@ body {
             width: 100%;
         }
     }
-}
-.con-sec {
-    padding: 0 10px;
-    margin: 10px 0;
+    .nav-item-act {
+        color: #7fd149;
+        .icon-home {
+            background-image: url(../image/footer/icon-home-active.png);
+        }
+        .icon-search {
+            background-image: url(../image/footer/icon-search-active.png);
+        }
+        .icon-chat {
+            background-image: url(../image/footer/icon-chat-active.png);
+        }
+        .icon-user {
+            background-image: url(../image/footer/icon-user-active.png);
+        }
+    }
 }
 .btn {
     display: block;
