--- a/ylxPatient_src/less/common.less
+++ b/ylxPatient_src/less/common.less
@@ -89,11 +89,7 @@ body {
         }
     }
 }
-.btn {
-    display: block;
-    font-size: 16px; line-height: 40px; text-align: center;
-    height: 40px;
-    background-color: #ff6836;
-    border-radius: 4px;
-    color: #fff;
+.sec-seperator {
+    display: block; height: 10px;
+    background: #f0efed;
 }
