--- a/ylxPatient_src/less/home_frame.less
+++ b/ylxPatient_src/less/home_frame.less
@@ -1,34 +1,90 @@
-.clinic-info-group {
-	position: relative;
-	.btn {
-		position: absolute; right: 0; top: 0;
-		height: 24px; 
-		font-size: 14px; line-height: 24px;
-		width: 68px;
+@border-color: #e9e9e9;
+.banner-top {
+	height: 164px;
+	border-top: 1px solid @border-color;
+	border-bottom: 1px solid @border-color;
+	.icon {
+		width: 44px; height: 44px;
+		border-radius: 50%;
+		background-repeat: no-repeat;
+		background-position: center center;
+		-webkit-background-size: 26px auto;
+		background-size: 26px auto;
+		margin: 4px auto;
+	}
+
+	.icon-tel {
+		background-image: url(../image/icon-call.png);
+		background-color: #85d154;
+	}
+
+	.icon-tv {
+		background-image: url(../image/icon-tv.png);
+		background-color: #ff9c79;
+		position: absolute; right: 14px; top: 50%;
+		margin-top: -22px;
+	}
+
+	.icon-hospital {
+		background-image: url(../image/icon-hospital.png);
+		background-color: #61d5ce;
+	}
+
+	.icon-chat-room {
+		background-image: url(../image/icon-chat-room.png);
+		background-color: #61a2d5;
+	}
+
+	.top-item {
+		float: left;
+		box-sizing: border-box;
+		text-align: center;
+		h3 {
+			font-weight: normal;
+			font-size: 16px;
+		}
+		p {
+			font-size: 14px;
+			color: #a4a4a4;
+		}
+	}
+
+	.tel-info {
+		width: 40%; height: 100%;
+		padding-top: 36px;
+		border-right: 1px solid @border-color;
+	}
+
+	.health-class {
+		width: 60%; height: 45%;
+		border-bottom: 1px solid @border-color;
+		position: relative;
+		text-align: left;
+		padding-top: 16px;
+		padding-left: 14px;
+	}
+
+	.clinic-intro, .chat-room {
+		width: 30%; height: 55%;
+		padding-top: 8px;
+	}
+
+	.clinic-intro {
+		border-right: 1px solid @border-color;
 	}
 }
-.btn-group {
-	.btn-wrap {
-		width: 25%;
-		float: left;
-		.btn {
-			margin: 0 auto;
-		}
-		&:first-child {
-			.btn {
-				margin-left: 0;
-			}
-		}
-		&:last-child {
-			.btn {
-				margin-right: 0;
-			}
-		}
-	}
-	.btn {
-		height: 24px;
-		font-size: 14px; line-height: 24px;
-		width: 68px;
+
+.clinic-address {
+	border-bottom: 1px solid @border-color;
+	height: 40px; line-height: 40px;
+	padding-left: 40px;
+	position: relative;
+	.icon-map-marker {
+		background: url(../image/icon-map-marker.png) no-repeat center right;
+		-webkit-background-size: 20px auto;
+		background-size: 20px auto;
+		position: absolute; top: 0; left: 0;
+		width: 30px; height: 100%;
 	}
 }
 
@@ -36,10 +92,14 @@
 	float: left;
 	width: 50%;
 	text-align: center;
-	background-color: #eee;
+	height: 30px; line-height: 30px;
+	box-sizing: border-box;
+	border-right: 1px solid @border-color;
+	border-bottom: 1px solid @border-color;
 }
+
 .tab-nav-item-act {
-	background-color: #ccc
+	color: #85d154;
 }
 .tab-content-item {
 	display: none;
@@ -51,9 +111,29 @@
 .doctor-list {
     .doctor-info {
         position: relative;
-        padding-left: 60px;
-        .photo {
+        padding-left: 76px;
+ 		padding-top: 6px;
+ 		padding-bottom: 6px;
+ 		border-bottom: 1px solid @border-color;
+        .doctor-photo {
             position: absolute; left: 0; top: 0;
+            border-radius: 50%;
+            border: 1px solid @border-color;
+            width: 50px; height: 50px;
+            margin: 12px;
+        }
+        .doctor-name {
+        	font-size: 16px;
+        	.ext-info {
+        		font-size: 12px;
+        		margin-left: 10px;
+        	}
+        }
+        h5 {
+        	font-size: 14px; font-weight: normal;
+        }
+        p {
+        	color: #a4a4a4;
         }
     }
 }
