--- a/ylxPatient_src/less/login.less
+++ b/ylxPatient_src/less/login.less
@@ -1,58 +1,63 @@
+html, body {
+	background: #f5f5f5;
+}
+#logoWrap {
+	background: #f5f5f5;
+	.logo {
+		margin: 10px auto 30px;
+		width: 116px; height: 116px;
+		border-radius: 50%;
+		background: #7fd149 url(../image/icon-logo.png) no-repeat center center;
+		-webkit-background-size: 80px auto;
+		background-size: 80px auto;
+	}
+}
 .field {
-	background-color: #fff;
-	border-bottom: 1px solid #e0e0e0;
+	border-bottom: 1px solid #c9c9c9;
 	position: relative;
-	padding-left: 40px;
+	padding-left: 30px;
 	font-size: 14px;
-	.icon-wrap {
-		position: absolute; left: 0; top: 0;
-		font-size: 16px; line-height: 50px;
+	margin: 0 30px;
+	height: 32px;
+	padding-top: 12px;
+	.icon {
+		position: absolute; left: 0; bottom: 0;
 		text-align: center;
-		width: 40px;
-		color: #ff6836;
+		display: block; width: 30px; height: 32px;
+		background-position: center center;
+		background-repeat: no-repeat;
+		-webkit-background-size: 20px auto;
+		background-size: 20px auto;
+	}
+	.icon-user-id {
+		background-image: url(../image/icon-user-id.png);
+	}
+	.icon-password {
+		background-image: url(../image/icon-password.png);
 	}
 	input {
-		display: block; width: 100%; height: 50px;
-		color: #8E8C8C;
+		display: block; width: 100%; height: 100%;
 	}
 }
 
-.username {
-	.icon-wrap {
-		font-size: 22px;
-	}
-}
-
-.register-note {
-	color: #666;
-	padding-left: 10px;
-	font-size: 14px; line-height: 1.5;
-	position: relative; top: 10px;
-	strong {
-		color: #222;
-		font-weight: normal;
-	}
-}
-
-.btn-login, .btn-register, .btn-reset-pass {
+.btn-login, .btn-register, .btn-forget-password {
 	height: 40px;
-	color: #fff; background-color: #ff6836;
 	text-align: center; word-spacing: 10px;
 	font-size: 16px; line-height: 40px;
-	border-radius: 5px;
-	margin: 20px 10px;
+	margin: 30px 30px 10px;
 }
 
-.page-register, .page-reset-pass {
-	.username {
-		padding-right: 120px;
-		.get-verify-code {
-			position: absolute; right: 10px; top: 12px;
-			height: 24px; line-height: 24px;
-			text-align: center;
-			padding: 0 6px;
-			border: 1px solid #e0e0e0; border-radius: 4px;
-			color: #ff6836;
-		}
-	}
+.btn-login {
+	color: #fff; background-color: #7fd149;
+	border: 1px solid #fff;
+}
+
+.btn-register {
+	color: #555; background-color: #f4f4f4;
+	border: 1px solid #c9c9c9;
+	margin-top: 0;
+}
+
+.btn-forget-password {
+	margin-top: 0;
 }
