--- a/ylxPatient/css/common.css
+++ b/ylxPatient/css/common.css
@@ -4,23 +4,29 @@
 .pull-right {
   float: right;
 }
+html,
 body {
-  padding-top: 44px;
+  height: 100%;
+}
+body {
   font-family: sans-serif;
   font-size: 14px;
   line-height: 1.5;
   color: #555;
 }
 #wrap {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-flex-flow: column;
+  flex-flow: column;
   height: 100%;
 }
 #header {
   text-align: center;
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  background-color: #7ace45;
+  position: relative;
+  background-color: #7fd149;
 }
 #header h1 {
   width: 100%;
@@ -40,18 +46,13 @@ body {
   -webkit-background-size: 10px auto;
   background-size: 10px auto;
 }
-#header .header-item {
-  display: none;
-}
-#header .header-item-act {
-  display: block;
+#main {
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+  flex: 1;
 }
 #footer {
   height: 48px;
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  right: 0;
   border-top: 1px solid #e9e9e9;
 }
 #footer .nav-item {
