--- a/piaofanzi/css/index.css
+++ b/piaofanzi/css/index.css
@@ -1,1 +1,204 @@
-body,html{height:100%;font-size:18px;line-height:1.5}a{text-decoration:none}.page{background-position:center bottom;background-repeat:no-repeat;background-size:100% auto;width:100%;height:100%}#page1{background-image:url(../images/bg_page1.jpg);background-size:cover;text-align:center}#page1 .logo{width:120px;height:120px;background:url(../images/logo.png) center center no-repeat;background-size:100% 100%;margin:0 auto 10px}#page1 h1{color:#fff}#page2{background-image:url(../images/bg_page2.jpg)}#page3{background-image:url(../images/bg_page3.jpg)}#page4{background-image:url(../images/bg_page4.jpg)}#page5{background-image:url(../images/bg_page5.jpg)}.btn-android,.btn-iphone{color:#fff;display:inline-block;height:44px;width:132px;line-height:44px;margin:10px;border:1px solid #fff;border-radius:22px}
+html,
+body {
+  height: 100%;
+  font-size: 12px;
+}
+.main {
+  height: 100%;
+}
+#page2 .poster {
+  background-image: url(../images/poster2.jpg);
+}
+#page3 .poster {
+  background-image: url(../images/poster3.jpg);
+}
+#page4 .poster {
+  background-image: url(../images/poster4.jpg);
+}
+#page5 .poster {
+  background-image: url(../images/poster5.jpg);
+}
+.sec {
+  height: 100%;
+  width: 100%;
+  margin: 0 auto;
+}
+.sec .poster-wrapper {
+  width: 36%;
+  height: 100%;
+  overflow: hidden;
+  position: relative;
+}
+.sec .poster-wrapper .poster {
+  position: absolute;
+  top: -4%;
+  left: -4%;
+  width: 108%;
+  height: 108%;
+  background-repeat: no-repeat;
+  background-position: 100% center;
+  background-size: auto 100%;
+  -webkit-filter: blur(4px);
+          filter: blur(4px);
+}
+.sec .content {
+  position: relative;
+  width: 64%;
+  height: 100%;
+}
+.sec .phone {
+  display: block;
+  width: 325px;
+  height: 555px;
+  position: absolute;
+  top: 50%;
+  margin-top: -277.5px;
+}
+.sec .intro {
+  width: 280px;
+  height: 320px;
+  position: absolute;
+  top: 50%;
+  margin-top: -160px;
+}
+.sec .hd {
+  font-size: 40px;
+  line-height: 1.5;
+  color: #ff7327;
+  font-weight: normal;
+}
+.sec .bd {
+  padding-top: 12px;
+  font-size: 20px;
+  line-height: 2;
+  color: #897056;
+}
+.sec-poster-on-left .poster-wrapper,
+.sec-poster-on-left .content {
+  float: left;
+}
+.sec-poster-on-left .phone {
+  left: 50px;
+}
+.sec-poster-on-left .intro {
+  left: 385px;
+}
+.sec-poster-on-right .poster-wrapper,
+.sec-poster-on-right .content {
+  float: right;
+}
+.sec-poster-on-right .phone {
+  right: 50px;
+}
+.sec-poster-on-right .intro {
+  right: 385px;
+}
+#footer {
+  height: 90px;
+  width: 100%;
+  color: #fff;
+  text-align: center;
+  background-color: #3a3a3a;
+}
+#footer h1,
+#footer .copy,
+#footer .weixin,
+#footer .weibo {
+  display: inline-block;
+  font-weight: normal;
+  margin-right: 20px;
+}
+#footer h1 {
+  font-size: 30px;
+  line-height: 90px;
+}
+#footer .copy {
+  font-size: 12px;
+  line-height: 1.4;
+  text-align: left;
+  position: relative;
+  top: 4px;
+}
+#footer .weixin,
+#footer .weibo {
+  color: #fff;
+  font-size: 30px;
+  transition: color .3s;
+  position: relative;
+}
+#footer .weixin:hover,
+#footer .weibo:hover {
+  color: #9e9e9e;
+}
+#footer .weixin .qrcode {
+  display: none;
+  position: absolute;
+  width: 100px;
+  height: 100px;
+  border: 1px solid #f95801;
+  top: -116px;
+  left: -35px;
+}
+#footer .weixin .qrcode:after {
+  content: '';
+  display: block;
+  width: 16px;
+  height: 16px;
+  position: absolute;
+  bottom: -16px;
+  left: 50%;
+  margin-left: -8px;
+  background: no-repeat url(../images/arrow.png) 0 0;
+  background-size: 16px 16px;
+}
+#footer .weixin:hover .qrcode {
+  display: block;
+}
+.image1 {
+  -webkit-animation: 2s blurToClear;
+          animation: 2s blurToClear;
+}
+.image1.blur {
+  -webkit-animation: 2s clearToBlur;
+          animation: 2s clearToBlur;
+}
+@-webkit-keyframes clearToBlur {
+  0% {
+    -webkit-filter: blur(0);
+            filter: blur(0);
+  }
+  100% {
+    -webkit-filter: blur(6px);
+            filter: blur(6px);
+  }
+}
+@keyframes clearToBlur {
+  0% {
+    -webkit-filter: blur(0);
+            filter: blur(0);
+  }
+  100% {
+    -webkit-filter: blur(6px);
+            filter: blur(6px);
+  }
+}
+@-webkit-keyframes blurToClear {
+  0% {
+    -webkit-filter: blur(6px);
+            filter: blur(6px);
+  }
+  100% {
+    -webkit-filter: blur(0);
+            filter: blur(0);
+  }
+}
+@keyframes blurToClear {
+  0% {
+    -webkit-filter: blur(6px);
+            filter: blur(6px);
+  }
+  100% {
+    -webkit-filter: blur(0);
+            filter: blur(0);
+  }
+}
