--- a/piaofanzi/less/index.less
+++ b/piaofanzi/less/index.less
@@ -1,60 +1,190 @@
+@poster-width: 36%;
+@poster-offset: 8%; 
+@phone-width: 325px;
+@phone-height: 555px;
+@phone-margin: 50px;
+@intro-width: 280px;
+@intro-height: 320px;
+@intro-margin: 10px;
+
 html, body {
 	height: 100%;
-	font-size: 18px;
-	line-height: 1.5;
+	font-size: 12px;
 }
-
-a {
-	text-decoration: none;
-}
-
-.page {
-	background-position: center bottom;
-	background-repeat: no-repeat;
-	background-size: 100% auto;
-	width: 100%;
+.main {
 	height: 100%;
 }
+#page2 .poster {
+	background-image: url(../images/poster2.jpg);
+}
+#page3 .poster {
+	background-image: url(../images/poster3.jpg);
+}
+#page4 .poster {
+	background-image: url(../images/poster4.jpg);
+}
+#page5 .poster {
+	background-image: url(../images/poster5.jpg);
+}
+.sec {
+	height: 100%;
+	width: 100%;
+	margin: 0 auto;
+	.poster-wrapper {
+		width: @poster-width;
+		height: 100%;
+		overflow: hidden;
+		position: relative;
+		.poster {
+			position: absolute;
+			top: -@poster-offset / 2;
+			left: -@poster-offset / 2;
+			width: 100% + @poster-offset;
+			height: 100% + @poster-offset;
+			background-repeat: no-repeat;
+			background-position: 100% center;
+			background-size: auto 100%;
+			filter: blur(4px);
+		}
+	}
+	.content {
+		position: relative;
+		width: 100% - @poster-width;
+		height: 100%;
+	}
+	.phone {
+		display: block;
+		width: @phone-width;
+		height: @phone-height;
+		position: absolute;
+		top: 50%;
+		margin-top: -@phone-height / 2;
+	}
+	.intro {
+		width: @intro-width;
+		height: @intro-height;
+		position: absolute;
+		top: 50%;
+		margin-top: -@intro-height / 2;
+	}
+	.hd {
+		font-size: 40px;
+		line-height: 1.5;
+		color: #ff7327;
+		font-weight: normal;
+	}
+	.bd {
+		padding-top: 12px;
+		font-size: 20px;
+		line-height: 2;
+		color: #897056;
+	}
+}
 
-#page1 {
-	background-image: url(../images/bg_page1.jpg);
-	background-size: cover;
+.sec-poster-on-left {
+	.poster-wrapper, .content {
+		float: left;
+	}
+	.phone {
+		left: @phone-margin;
+	}
+	.intro {
+		left: @phone-margin + @phone-width + @intro-margin;
+	}
+
+}
+.sec-poster-on-right {
+	.poster-wrapper, .content {
+		float: right;
+	}
+	.phone {
+		right: @phone-margin;
+	}
+	.intro {
+		right: @phone-margin + @phone-width + @intro-margin;
+	}
+}
+
+#footer {
+	@footer-height: 90px;
+	@qrcode-width: 100px;
+	@qrcode-height: 100px;
+	@weixin-height: 30px;
+	@arrow-width: 16px;
+	@arrow-height: 16px;
+	height: @footer-height;
+	width: 100%;
+	color: #fff;
 	text-align: center;
-	.logo {
-		width: 120px;
-		height: 120px;
-		background: no-repeat url(../images/logo.png) center center;
-		background-size: 100% 100%;
-		margin: 0 auto 10px;
+	background-color: #3a3a3a;
+	h1, .copy, .weixin, .weibo {
+		display: inline-block;
+		font-weight: normal;
+		margin-right: 20px;
 	}
 	h1 {
+		font-size: @weixin-height;
+		line-height: @footer-height;
+	}
+	.copy {
+		font-size: 12px;
+		line-height: 1.4;
+		text-align: left;
+		position: relative;
+		top: 4px;
+	}
+	.weixin, .weibo {
 		color: #fff;
+		font-size: @weixin-height;
+		transition: color .3s;
+		position: relative;
+		&:hover {
+			color: #9e9e9e;
+		}
+	}
+	.weixin {
+		.qrcode {
+			display: none;
+			position: absolute;
+			width: @qrcode-width;
+			height: @qrcode-height;
+			border: 1px solid #f95801; 
+			top: -@qrcode-width - @arrow-height;
+			left: -(@qrcode-height - @weixin-height) / 2;
+			&:after {
+				content: '';
+				display: block;
+				width: @arrow-width;
+				height: @arrow-height;
+				position: absolute;
+				bottom: -@arrow-height;
+				left: 50%;
+				margin-left: -@arrow-width / 2;
+				background: no-repeat url(../images/arrow.png) 0 0;
+				background-size: @arrow-width @arrow-height;
+			}
+		}
+		&:hover {
+			.qrcode {
+				display: block;
+			}
+		}
 	}
 }
-#page2 {
-	background-image: url(../images/bg_page2.jpg);
+
+.image1 {
+	animation: 2s blurToClear;
 }
-#page3 {
-	background-image: url(../images/bg_page3.jpg);
-}
-#page4 {
-	background-image: url(../images/bg_page4.jpg);
-}
-#page5 {
-	background-image: url(../images/bg_page5.jpg);
+.image1.blur {
+	animation: 2s clearToBlur;
 }
 
-.btn-iphone, .btn-android {
-	color: #fff;
-	display: inline-block;
-	height: 44px;
-	width: 132px;
-	line-height: 44px;
-	margin: 10px;
-	border: 1px solid #fff;
-	border-radius: 22px;
+@keyframes clearToBlur {
+	0% { filter: blur(0); }
+	100% { filter: blur(6px); }
 }
 
-
-
-
+@keyframes blurToClear {
+	0% { filter: blur(6px); }
+	100% { filter: blur(0); }
+}
