--- a/piaofanzi/mobile/less/index.less
+++ b/piaofanzi/mobile/less/index.less
@@ -1,122 +1,245 @@
-html, body {
-	height: 100%;
-	font-size: 18px;
-	line-height: 1.5;
+@charset "UTF-8";
+html,
+body,
+.main {
+    height: 100%;
 }
 
-a {
-	text-decoration: none;
+body {
+    font-size: 62.5%;
+    font: 16px "Helvetica Neue", Helvetica, STHeiTi, "微软雅黑", sans-serif;
+    line-height: 1.5;
+}
+@btn-height: 44px;
+@btn-width: 41%;
+@btn-margin: (100% - @btn-width * 2) / 3;
+.easeIn {
+    opacity: 1 !important;
 }
 
 .page {
-	position: relative;
-	width: 100%; height: 100%;
+    height: 100%;
+    position: relative;
+    .page-desc {
+    	padding: 40px 40px 0 40px;
+    	h2 {
+    		color: #ff7327;
+    		font-size: 20px;
+    		font-weight: 400;
+    		margin-bottom: 6px;
+    	}
+    	p {
+    		color: #fff;
+    		font-size: 14px;
+    	}
+    }
+    .phone {
+    	position: absolute;
+    	width: 100%;
+    	top: 140px;
+    	bottom: 0;
+    	background-position: center top;
+    	background-repeat: no-repeat;
+    	background-size: 80% auto;
+    }
 }
 
-.page-bg {
-	position: absolute; bottom: 0;
-	width: 100%; height: 44%;
-	background-position: center bottom;
-	background-repeat: no-repeat;
-	background-size: cover;
-	z-index: 10;
-}
-
-#page1 {
+.page-1 {
 	background-image: url(../images/bg_page1.jpg);
-	background-size: cover;
+	background-size: 100% 100%;
+	overflow: hidden;
 	text-align: center;
-	.page-desc {
-		padding: 56px 0 0 0;
-		width: 100%;
-	}
+	color: #fff;
 	.logo {
 		width: 120px;
 		height: 120px;
-		background: no-repeat url(../images/logo.png) center center;
-		background-size: 100% 100%;
-		margin: 0 auto;
+		margin: 40px auto 0;
+		background-image: url(../images/logo.png);
+		background-size: 100%;
 	}
 	h1 {
+		font-weight: 400;
+		font-size: 20px;
+		line-height: 1.5;
+	}
+	.btn {
+		display: inline-block;
+		text-decoration: none;
+		height: @btn-height;
+		line-height: @btn-height;
+		border-radius: @btn-height / 2;
+		width: @btn-width;
+		margin: 20px @btn-margin;
 		color: #fff;
 		font-size: 20px;
+		border: 1px solid #fff;
 	}
-	.btn-wrap {
-		margin-top: 28px;
+	.btn-iphone {
+		margin-right: @btn-margin / 2;
 	}
-}
-#page2 .page-bg {
-	background-image: url(../images/bg_page2.jpg);
-}
-#page3 .page-bg {
-	background-image: url(../images/bg_page3.jpg);
-}
-#page4 .page-bg {
-	background-image: url(../images/bg_page4.jpg);
-}
-#page5 .page-bg {
-	background-image: url(../images/bg_page5.jpg);
-}
-
-.btn-iphone, .btn-android {
-	color: #fff;
-	display: inline-block;
-	height: 44px;
-	width: 140px;
-	line-height: 44px;
-	margin: 6px;
-	border: 1px solid #fff;
-	border-radius: 22px;
-	.fa {
-		font-size: 22px;
-		margin-right: 4px;
+	.btn-android {
+		margin-left: @btn-margin / 2;
+	}
+	.phone {
+		top: 290px;
+		background-image: url(../images/phone1.png);
+		background-size: 100% auto;
 	}
 }
 
-.page-desc {
-	padding: 30px 10% 0;
-	h2 {
-		font-size: 20px;
-		color: #ff7327;
-		margin-bottom: 8px;
-	}
-	p {
-		font-size: 14px;
-		color: #897056;
+.page-2 {
+	.phone {
+		background-image: url(../images/phone2.png);
 	}
 }
 
-.phone {
-	width: 100%; height: 60%;
-	z-index: 20;
-	background-position: center bottom;
-	background-repeat: no-repeat;
-	background-size: auto 100%;
+.page-3 {
+	.phone {
+		background-image: url(../images/phone3.png);
+	}
 }
 
-.phone1 {
-	position: absolute; left: 0; bottom: 0;
-	height: 50%;
-	background-position: center bottom;
-	background-size: auto 100%;
-	background-image: url(../images/phone1.png);
+.page-4 {
+	.phone {
+		background-image: url(../images/phone4.png);
+	}
 }
 
-.phone2 {
-	background-image: url(../images/phone2.png);
+.page-5 {
+	.phone {
+		background-image: url(../images/phone5.png);
+	}
 }
 
-.phone3 {
-	background-image: url(../images/phone3.png);
+.page-bg {
+    background-size: cover;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    width: 100%;
+    display: none;
+    &.active {
+    	display: block;
+    }
 }
 
-.phone4 {
-	background-image: url(../images/phone4.png);
+.page-bg-2 {
+    background-image: url(../images/bg_page2.jpg);
 }
 
-.phone5 {
-	background-image: url(../images/phone5.png);
+.page-bg-4 {
+    background-image: url(../images/bg_page4.jpg);
 }
 
+.page-img {
+    overflow: hidden;
+    .background {
+    	background: 50% 50% no-repeat;
+    	background-size: cover;
+    }
+}
 
+.loaded .page-img .background {
+    background-image: none;
+}
 
+.page-2 .background {
+    background-image: url(http://sqimg.qq.com/qq_product_operations/imb/page2-bg.jpg);
+}
+
+.page-4 .background {
+    background-image: url(http://sqimg.qq.com/qq_product_operations/im/2016/mb/page4-bg.jpg);
+}
+
+.page-detail {
+    overflow: hidden;
+    background-color: #fff;
+    .page-desc {
+    	p {
+    		color: #897056;
+    	}
+    } 
+}
+
+footer {
+    height: 100px;
+    background: #2a2a2a;
+    color: #8c8c8c;
+    text-align: center;
+}
+
+footer .computer a {
+    padding-left: 22px;
+    background: url(http://sqimg.qq.com/qq_product_operations/imb/icon-computer.png) left center no-repeat;
+    background-size: 16.5px 14px;
+    text-decoration: none;
+    line-height: 50px;
+    height: 50px;
+}
+
+footer .computer a, footer .computer a:focus, footer .computer a:visited, footer .computer a:active {
+    color: #8c8c8c;
+}
+
+footer p {
+    font-size: 10px;
+    color: #8c8c8c;
+    line-height: 1.5em;
+}
+
+@-webkit-keyframes before_fade_in {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 0;
+    }
+}
+
+@-webkit-keyframes fade_in {
+    0% {
+        -webkit-transform: scale3d(0.9, 0.9, 1);
+        opacity: 0;
+    }
+
+    50% {
+        -webkit-transform: scale3d(1.051, 1.051, 1);
+    }
+
+    100% {
+        -webkit-transform: scale3d(1, 1, 1);
+        opacity: 1;
+    }
+}
+
+@-webkit-keyframes fade_in_no_scale {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
+@-webkit-keyframes fade_out {
+}
+
+@-webkit-keyframes tips_ani {
+    0% {
+        opacity: 0;
+        background-position: center 10px;
+        background-size: 100%;
+    }
+
+    10% {
+        opacity: 1;
+    }
+
+    100% {
+        opacity: 0;
+        background-position: center 0;
+        background-size: 95%;
+    }
+}
