--- a/piaofanzi/less/index.less
+++ b/piaofanzi/less/index.less
@@ -6,13 +6,120 @@
 @intro-width: 280px;
 @intro-height: 320px;
 @intro-margin: 10px;
+@content-left-height: 600px;
+@content-right-height: 500px;
 
 html, body {
 	height: 100%;
 	font-size: 12px;
+	font-family: Helvetica, Tahoma, Arial, "Microsoft YaHei", "Hiragino Sans GB", "Hiragino Sans GB W3", STXihei, STHeiti, Heiti, SimSun, sans-serif;
 }
 .main {
 	height: 100%;
+}
+#page1 {
+	height: 100%;
+	.focus {
+		height: 100%;
+		position: relative;
+	}
+	.bg-container {
+		height: 100%;
+		.bg {
+			position: relative;
+			overflow: hidden;
+			width: 100%;
+			.mover {
+				position: absolute;
+				height: 100%;
+				img {
+					float: left;
+					display: block;
+					width: auto;
+					height: 100%;
+					border: 0;
+					vertical-align: top;
+				}
+			}
+		}
+		.bg-1, .bg-2, .bg-3 {
+			height: 26%;
+		}
+		.bg-4 {
+			height: 22%;
+		}
+	}
+	.content-left, .content-right {
+		position: absolute;
+		top: 50%;
+	}
+	.content-left {
+		right: 50%;
+		height: @content-left-height;
+		margin-top: -@content-left-height / 2;
+		.phone1 {
+			height: 100%;
+			width: auto;
+		}
+	}
+	.content-right {
+		left: 50%;
+		height: @content-right-height;
+		margin-top: -@content-right-height / 2;
+	}
+	.slogan {
+		width: 492px;
+		height: 258px;
+		background: url(../images/slogan.png);
+	}
+	.btn-group {
+		height: 160px;
+		margin-top: 70px;
+		padding-left: 35px;
+	}
+	.qrcode {
+		display: block;
+		width: 160px;
+		height: 160px;
+		float: left;
+		margin-right: 40px;
+	}
+	.btn {
+		@btn-height: 60px;
+		color: #fff;
+		font-size: 28px;
+		height: 60px;
+		line-height: @btn-height;
+		border: 1px solid #fff;
+		border-radius: @btn-height / 2;
+		text-decoration: none;
+		float: left;
+		display: block;
+		padding-left: 80px;
+		position: relative;
+		width: 234px;
+		&:hover {
+			background: rgba(255, 255, 255, .3);
+		}
+	}
+	.btn-ios {
+		margin-top: 36px;
+	}
+	.icon {
+		width: 40px;
+		height: 40px;
+		display: block;
+		content: '';
+		position: absolute;
+		left: 20px;
+		top: 10px;
+	}
+	.icon-android {
+		background: url(../images/android.png);
+	}
+	.icon-ios {
+		background: url(../images/ios.png);
+	}
 }
 #page2 .poster {
 	background-image: url(../images/poster2.jpg);
