--- a/piaofanzi/less/index.less
+++ b/piaofanzi/less/index.less
@@ -64,6 +64,7 @@ html, body {
 	}
 	.content-right {
 		left: 50%;
+		width: 480px;
 		height: @content-right-height;
 		margin-top: -@content-right-height / 2;
 	}
