--- a/piaofanzi/less/index.less
+++ b/piaofanzi/less/index.less
@@ -57,6 +57,7 @@ html, body {
 		right: 50%;
 		height: @content-left-height;
 		margin-top: -@content-left-height / 2;
+		margin-right: 25px;
 		.phone1 {
 			height: 100%;
 			width: auto;
