--- a/piaofanzi/css/index.css
+++ b/piaofanzi/css/index.css
@@ -80,7 +80,7 @@ body {
   float: left;
   margin-right: 40px;
 }
-#page1 .btn {
+.btn {
   color: #fff;
   font-size: 28px;
   height: 60px;
@@ -88,19 +88,15 @@ body {
   border: 1px solid #fff;
   border-radius: 30px;
   text-decoration: none;
-  float: left;
-  display: block;
+  display: inline-block;
   padding-left: 80px;
   position: relative;
   width: 234px;
 }
-#page1 .btn:hover {
+.btn:hover {
   background: rgba(255, 255, 255, 0.3);
 }
-#page1 .btn-ios {
-  margin-top: 36px;
-}
-#page1 .icon {
+.btn .icon {
   width: 40px;
   height: 40px;
   display: block;
@@ -109,11 +105,14 @@ body {
   left: 20px;
   top: 10px;
 }
-#page1 .icon-android {
+.btn .icon-android {
   background: url(../images/android.png);
 }
-#page1 .icon-ios {
+.btn .icon-ios {
   background: url(../images/ios.png);
+}
+.btn-ios {
+  margin-top: 36px;
 }
 #page2 .poster {
   background-image: url(../images/poster2.jpg);
@@ -181,6 +180,26 @@ body {
   font-size: 20px;
   line-height: 2;
   color: #897056;
+}
+#page5 .btn-group {
+  margin-top: 40px;
+}
+#page5 .btn {
+  color: #ff7327;
+  border-color: #ff7327;
+}
+#page5 .btn .icon-ios {
+  background-image: url(../images/ios_orange.png);
+}
+#page5 .btn .icon-android {
+  background-image: url(../images/android_orange.png);
+}
+#page5 .btn:hover {
+  background: rgba(255, 115, 39, 0.3);
+}
+#page5 .intro {
+  height: 460px;
+  margin-top: -230px;
 }
 .sec-poster-on-left .poster-wrapper,
 .sec-poster-on-left .content {
