--- a/piaofanzi/less/index.less
+++ b/piaofanzi/less/index.less
@@ -86,26 +86,23 @@ html, body {
 		float: left;
 		margin-right: 40px;
 	}
-	.btn {
-		@btn-height: 60px;
-		color: #fff;
-		font-size: 28px;
-		height: 60px;
-		line-height: @btn-height;
-		border: 1px solid #fff;
-		border-radius: @btn-height / 2;
-		text-decoration: none;
-		float: left;
-		display: block;
-		padding-left: 80px;
-		position: relative;
-		width: 234px;
-		&:hover {
-			background: rgba(255, 255, 255, .3);
-		}
-	}
-	.btn-ios {
-		margin-top: 36px;
+}
+
+.btn {
+	@btn-height: 60px;
+	color: #fff;
+	font-size: 28px;
+	height: 60px;
+	line-height: @btn-height;
+	border: 1px solid #fff;
+	border-radius: @btn-height / 2;
+	text-decoration: none;
+	display: inline-block;
+	padding-left: 80px;
+	position: relative;
+	width: 234px;
+	&:hover {
+		background: rgba(255, 255, 255, .3);
 	}
 	.icon {
 		width: 40px;
@@ -122,6 +119,9 @@ html, body {
 	.icon-ios {
 		background: url(../images/ios.png);
 	}
+}
+.btn-ios {
+	margin-top: 36px;
 }
 #page2 .poster {
 	background-image: url(../images/poster2.jpg);
@@ -187,6 +187,29 @@ html, body {
 		font-size: 20px;
 		line-height: 2;
 		color: #897056;
+	}
+}
+
+#page5 {
+	.btn-group {
+		margin-top: 40px;
+	}
+	.btn {
+		color: #ff7327;
+		border-color: #ff7327;
+		.icon-ios {
+			background-image: url(../images/ios_orange.png);
+		}
+		.icon-android {
+			background-image: url(../images/android_orange.png);
+		}
+		&:hover {
+			background: rgba(255, 115, 39, .3);
+		}
+	}
+	.intro {
+		height: 460px;
+		margin-top: -230px;
 	}
 }
 
