--- a/piaofanzi/css/index.css
+++ b/piaofanzi/css/index.css
@@ -130,6 +130,7 @@ body {
   height: 100%;
   width: 100%;
   margin: 0 auto;
+  overflow: hidden;
 }
 .sec .poster-wrapper {
   width: 36%;
@@ -146,8 +147,9 @@ body {
   background-repeat: no-repeat;
   background-position: 100% center;
   background-size: auto 100%;
-  -webkit-filter: blur(4px);
-          filter: blur(4px);
+  -webkit-filter: blur(0);
+          filter: blur(0);
+  transition: all 0.6s ease-in-out;
 }
 .sec .content {
   position: relative;
@@ -181,6 +183,10 @@ body {
   line-height: 2;
   color: #897056;
 }
+.sec.sec-anim .poster {
+  -webkit-filter: blur(4px);
+          filter: blur(4px);
+}
 #page5 .btn-group {
   margin-top: 40px;
 }
@@ -206,19 +212,39 @@ body {
   float: left;
 }
 .sec-poster-on-left .phone {
-  left: 50px;
+  left: 450px;
+  transition: left .4s;
 }
 .sec-poster-on-left .intro {
-  left: 385px;
+  left: 885px;
+  transition: left 0.4s ease-in-out;
 }
 .sec-poster-on-right .poster-wrapper,
 .sec-poster-on-right .content {
   float: right;
 }
 .sec-poster-on-right .phone {
-  right: 50px;
+  right: 450px;
+  transition: right .4s;
 }
 .sec-poster-on-right .intro {
+  right: 885px;
+  transition: right 0.4s ease-in-out;
+}
+.no-csstransitions .sec-poster-on-left .phone,
+.sec-poster-on-left.sec-anim .phone {
+  left: 50px;
+}
+.no-csstransitions .sec-poster-on-left .intro,
+.sec-poster-on-left.sec-anim .intro {
+  left: 385px;
+}
+.no-csstransitions .sec-poster-on-right .phone,
+.sec-poster-on-right.sec-anim .phone {
+  right: 50px;
+}
+.no-csstransitions .sec-poster-on-right .intro,
+.sec-poster-on-right.sec-anim .intro {
   right: 385px;
 }
 #footer {
@@ -281,52 +307,4 @@ body {
 }
 #footer .weixin:hover .qrcode {
   display: block;
-}
-.image1 {
-  -webkit-animation: 2s blurToClear;
-          animation: 2s blurToClear;
-}
-.image1.blur {
-  -webkit-animation: 2s clearToBlur;
-          animation: 2s clearToBlur;
-}
-@-webkit-keyframes clearToBlur {
-  0% {
-    -webkit-filter: blur(0);
-            filter: blur(0);
-  }
-  100% {
-    -webkit-filter: blur(6px);
-            filter: blur(6px);
-  }
-}
-@keyframes clearToBlur {
-  0% {
-    -webkit-filter: blur(0);
-            filter: blur(0);
-  }
-  100% {
-    -webkit-filter: blur(6px);
-            filter: blur(6px);
-  }
-}
-@-webkit-keyframes blurToClear {
-  0% {
-    -webkit-filter: blur(6px);
-            filter: blur(6px);
-  }
-  100% {
-    -webkit-filter: blur(0);
-            filter: blur(0);
-  }
-}
-@keyframes blurToClear {
-  0% {
-    -webkit-filter: blur(6px);
-            filter: blur(6px);
-  }
-  100% {
-    -webkit-filter: blur(0);
-            filter: blur(0);
-  }
 }
