--- a/piaofanzi/less/index.less
+++ b/piaofanzi/less/index.less
@@ -104,8 +104,10 @@ html, body {
 	padding-left: 80px;
 	position: relative;
 	width: 234px;
+	transition: background-color .3s;
 	&:hover {
 		background: rgba(255, 255, 255, .3);
+		transition: background-color .3s;
 	}
 	.icon {
 		width: 40px;
