--- a/piaofanzi/less/index.less
+++ b/piaofanzi/less/index.less
@@ -294,6 +294,7 @@ html, body {
     @arrow-width: 16px;
     @arrow-height: 16px;
     height: @footer-height;
+    display: none;
     width: 100%;
     color: #fff;
     position: absolute;
