--- a/piaofanzi/mobile/less/index.less
+++ b/piaofanzi/mobile/less/index.less
@@ -202,7 +202,7 @@ footer {
     }
     .link-group {
         margin-top: 6px;
-        a {
+        a, .btn-wechat {
             display: inline-block;
             border-radius: 50%;
             border: 1px solid #fff;
