piaofanzi: change coler

--- a/piaofanzi/mobile/less/index.less
+++ b/piaofanzi/mobile/less/index.less
@@ -29,7 +29,7 @@ body {
     		margin-bottom: 6px;
     	}
     	p {
-    		color: #fff;
+    		color: #897056;
     		font-size: 14px;
     	}
     }
